force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__AdhocAllowApprovedRequestsToBeDeleted__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AdhocAllowApprovedRequestsToBeDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this flag to true if approved requests can be deleted by the system.</description>
    <inlineHelpText>Set this flag to true if approved requests can be deleted by the system.</inlineHelpText>
    <label>Allow Approved Requests To Be Deleted</label>
    <type>Checkbox</type>
</CustomField>