force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__AdhocAutoReapprovalStatusLabel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AdhocAutoReapprovalStatusLabel__c</fullName>
    <description>This is the value the approval status gets set to when a request is auto-reapproved by the system.</description>
    <inlineHelpText>This is the value the approval status gets set to when a request is auto-reapproved by the system.</inlineHelpText>
    <label>Adhoc Auto Reapproval Status Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto-Reapproved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>