force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__AdhocStepAutoReapprove__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AdhocStepAutoReapprove__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this flag to true if auto-reapproval should be enabled for this adhoc process.</description>
    <inlineHelpText>Set this flag to true if auto-reapproval should be enabled for this adhoc process.</inlineHelpText>
    <label>Adhoc Step Auto Reapprove</label>
    <type>Checkbox</type>
</CustomField>