force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__ApprovalSummaryPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ApprovalSummaryPage__c</fullName>
    <description>Specifies the name of a custom page used to show approval summary information.  Leave it blank to use the default page.</description>
    <inlineHelpText>Specifies the name of a custom page used to show approval summary information.  Leave it blank to use the default page.</inlineHelpText>
    <label>Approval Summary Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>