force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__BackupAdminUser__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__BackupAdminUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field allows you to specify a backup admin approver at the process level instead of the default system wide level that is assigned to requests that have an invalid or deactivated approver.</description>
    <inlineHelpText>This field allows you to specify a backup admin approver at the process level instead of the default system wide level that is assigned to requests that have an invalid or deactivated approver.</inlineHelpText>
    <label>Backup Admin User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>