force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__ChildObjectType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ChildObjectType__c</fullName>
    <description>The child object type. Only applicable to a child process step.</description>
    <inlineHelpText>The child object type. Only applicable to a child process step.</inlineHelpText>
    <label>Child Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>