force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__ConsolidateApprovals__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ConsolidateApprovals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether multiple approvals should be consolidated into a single approval. This takes effect only when consolidated notifications is also checked.</description>
    <inlineHelpText>Consolidate multiple approvals into a single approval. This takes effect only when consolidated notifications is also checked.</inlineHelpText>
    <label>Consolidate Approvals</label>
    <type>Checkbox</type>
</CustomField>