force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__ConsolidateNotifications__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ConsolidateNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether multiple approval notifications for an approver should be consolidated into a single notification.</description>
    <inlineHelpText>Consolidate multiple approval notifications for an approver into a single notification</inlineHelpText>
    <label>Consolidate Notifications</label>
    <type>Checkbox</type>
</CustomField>