force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__ContinuePendingApprovalsOnAReject__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ContinuePendingApprovalsOnAReject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Continue with approval process even when a step is rejected.</description>
    <inlineHelpText>Continue with approval process even when a step is rejected.</inlineHelpText>
    <label>Continue Pending Approvals on a Reject</label>
    <type>Checkbox</type>
</CustomField>