force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__CustomMyApprovalsPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__CustomMyApprovalsPage__c</fullName>
    <description>Specifies the name of a custom page used to show My Approvals information.  Leave it blank to use the default page.</description>
    <inlineHelpText>Specifies the name of a custom page used to show My Approvals information.  Leave it blank to use the default page.</inlineHelpText>
    <label>Custom My Approvals Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>