force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__DependsOn__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__DependsOn__c</fullName>
    <description>List of steps which must be completed before this step.</description>
    <label>Depends On</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>