force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Description__c</fullName>
    <description>Denotes a description for the particular approval process record type being used (i.e. initial action description, final submission action, etc)</description>
    <inlineHelpText>Denotes a description for the particular approval process record type being used (i.e. initial action description, final submission action, etc)</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>