force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Entry_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Entry_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entry Criteria</label>
    <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
    <relationshipLabel>Entry Criteria</relationshipLabel>
    <relationshipName>Entry_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>