force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Entry_Criteria_BoolOper__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Entry_Criteria_BoolOper__c</fullName>
    <description>The entry criteria boolean operator</description>
    <label>Entry Criteria Boolean Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
                <default>true</default>
                <label>AND</label>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>