force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Entry_Criteria_Comparison_Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Entry_Criteria_Comparison_Type__c</fullName>
    <label>Entry Criteria Comparison Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>equal to</fullName>
            </value>
            <value>
                <fullName>not equal to</fullName>
            </value>
            <value>
                <fullName>starts with</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>does not contain</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>less than or equal to</fullName>
            </value>
            <value>
                <fullName>greater than or equal to</fullName>
            </value>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>not in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>