force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Entry_Criteria_Field__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Entry_Criteria_Field__c</fullName>
    <label>Entry Criteria Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>