force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Escalation_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Escalation_Email_Template__c</fullName>
    <description>The name of the Email Template used to send notifications when an approval request is escalated.</description>
    <inlineHelpText>The name of the Email Template used to send notifications when an approval request is escalated.</inlineHelpText>
    <label>Escalation Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>