force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Final_Action_Field_Name_Source__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Final_Action_Field_Name_Source__c</fullName>
    <label>Final Action Field Name Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
                <default>true</default>
                <label>Self</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>