force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Final_Action_Field_Update_Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Final_Action_Field_Update_Type__c</fullName>
    <label>Final Action Field Update Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Field Update</fullName>
                <default>true</default>
                <label>Field Update</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>