force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Final_Action_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Final_Action_Field_Value__c</fullName>
    <label>Final Action Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>