force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Final_Approval_Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Final_Approval_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Approval Action</label>
    <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
    <relationshipLabel>Final Approval Actions</relationshipLabel>
    <relationshipName>Final_Approval_Action</relationshipName>
    <type>Lookup</type>
</CustomField>