force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Initial_Submission_Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Initial_Submission_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Submission Action</label>
    <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
    <relationshipLabel>Initial Submission Actions</relationshipLabel>
    <relationshipName>Initial_Submission_Action</relationshipName>
    <type>Lookup</type>
</CustomField>