force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Initial_Submission_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Initial_Submission_Action_Type__c</fullName>
    <label>Initial Submission Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Field Update (Constant)</fullName>
            </value>
            <value>
                <fullName>Field Update (Value)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>