force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__OriginalInstanceProcessId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__OriginalInstanceProcessId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to original process definition that is associated with Approval Requests</description>
    <inlineHelpText>Reference to original process definition that is associated with Approval Requests</inlineHelpText>
    <label>Original Instance Process</label>
    <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
    <relationshipLabel>Approval Processes (Original Instance Process)</relationshipLabel>
    <relationshipName>Original_Approval_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>