force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__ProcessEscalateToId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ProcessEscalateToId__c</fullName>
    <description>The id of the assignee the request will be escalated to if it is escalated at the process level.</description>
    <inlineHelpText>The id of the assignee the request will be escalated to if it is escalated at the process level.</inlineHelpText>
    <label>Process Escalate To Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>