force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__ProcessEscalateToName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ProcessEscalateToName__c</fullName>
    <description>The name of the assignee the request will be escalated to if it is escalated at the process level.</description>
    <inlineHelpText>The name of the assignee the request will be escalated to if it is escalated at the process level.</inlineHelpText>
    <label>Process Escalate To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>