force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__ProcessExpectedHoursToComplete__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ProcessExpectedHoursToComplete__c</fullName>
    <description>The number of expected hours that each approval step for this process needs to be completed in (approved or rejected) before a request is automatically escalated.</description>
    <inlineHelpText>The number of expected hours that each approval step for this process needs to be completed in (approved or rejected) before a request is automatically escalated.</inlineHelpText>
    <label>Process Expected Hours To Complete</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>