force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__RecallCommentsEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__RecallCommentsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this flag to enable recall comments for this process. When enabled, the user will be prompted to enter comments when the request is cancelled or recalled.</description>
    <inlineHelpText>Set this flag to enable recall comments for this process. When enabled, the user will be prompted to enter comments when the request is cancelled or recalled.</inlineHelpText>
    <label>Recall Comments Enabled</label>
    <type>Checkbox</type>
</CustomField>