force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__RejectionCommentsMandatory__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__RejectionCommentsMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this flag to make rejection comments mandatory for this process. When set, the user will be forced to enter comments when a request is rejected.</description>
    <inlineHelpText>Set this flag to make rejection comments mandatory for this process. When set, the user will be forced to enter comments when a request is rejected.</inlineHelpText>
    <label>Rejection Comments Mandatory</label>
    <type>Checkbox</type>
</CustomField>