force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Step__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Step</label>
    <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Step</relationshipName>
    <type>Lookup</type>
</CustomField>