force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Step_Approver_Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Step_Approver_Type__c</fullName>
    <label>Step Approver Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approver 1</fullName>
            </value>
            <value>
                <fullName>Approver 2</fullName>
            </value>
            <value>
                <fullName>Approver 3</fullName>
            </value>
            <value>
                <fullName>Approver 4</fullName>
            </value>
            <value>
                <fullName>Approver 5</fullName>
            </value>
            <value>
                <fullName>Approver 6</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
                <default>true</default>
                <label>Unspecified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>