force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Step_Assignee_Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Step_Assignee_Description__c</fullName>
    <description>The step assignee description</description>
    <label>Step Assignee Description</label>
    <type>TextArea</type>
</CustomField>