force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Step_Assignee_Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Step_Assignee_Id__c</fullName>
    <label>Step Assignee Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>