force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Step_Auto_Complete__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Step_Auto_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Step Auto Complete</label>
    <type>Checkbox</type>
</CustomField>