force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Step_Filter__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Step_Filter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Step Filter</label>
    <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
    <relationshipLabel>Step Filters</relationshipLabel>
    <relationshipName>Step_Filter</relationshipName>
    <type>Lookup</type>
</CustomField>